# Fesapi

./: CMakeLists.txt  runCMakeGuiWithEnvironmentVariables.csh  runCMakeGuiWithEnvironmentVariables_win32.ps1  runCMakeGuiWithEnvironmentVariables_win64.ps1
cmake/: fesapiCs.csproj.template
cmake/modules/: FindMiniZip.cmake  FindSZIP.cmake  FindSZIP.cmake.LICENSING.txt  FindUUID.cmake  FindUUID.cmake.LICENSING.txt
cs/src/: BoolArray.cs  CharArray.cs  DoubleArray.cs  FaultVector.cs  FloatArray.cs  FormationMarkerVector.cs  FractureVector.cs  FrontierVector.cs  Grid2dRepresentationVector.cs  Grid2dSetRepresentationVector.cs  HdfProxyVector.cs  HorizonInterpretationVector.cs  HorizonVector.cs  IjkGridRepresentationVector.cs  IntArray.cs  LocalDepth3dCrsVector.cs  LocalTime3dCrsVector.cs  LogVector.cs  LongArray.cs  PolylineRepresentationVector.cs  PolylineSetRepresentationVector.cs  SWIGTYPE_p_bool.cs  SWIGTYPE_p_double.cs  SWIGTYPE_p_float.cs  SWIGTYPE_p_int.cs  SWIGTYPE_p_long.cs  SWIGTYPE_p_short.cs  SWIGTYPE_p_unsigned_char.cs  (+64 more)
doc/: Doxyfile.in
example/: CMakeLists.txt  example.cpp
gsoap/: PropertyTypeMapping.xsd  namespace.cpp  sed.vbs
resources/: PropertyKindMapping.xml  PropertyTypeMapping.xml
src/: CMakeLists.txt  EpcDocument.cpp  EpcDocument.h  GuidTools.cpp  GuidTools.h  nullptr_emulation.h
src/epc/: ContentType.cpp  ContentType.h  CoreProperty.cpp  CoreProperty.h  FileContentType.cpp  FileContentType.h  FileCoreProperties.cpp  FileCoreProperties.h  FilePart.cpp  FilePart.h  FileRelationship.cpp  FileRelationship.h  Package.cpp  Package.h  Relationship.cpp  Relationship.h
src/proxies/: envC.cpp  envH.h  envStub.h  gsoap_resqml2_0H.h  gsoap_resqml2_0Stub.h  gsoap_resqml2_0_1H.h  gsoap_resqml2_0_1Stub.h  gsoap_witsml1_4_1_1H.h  gsoap_witsml1_4_1_1Stub.h  namespace.cpp  resqml2_0NamespaceDefinition.cpp  stdsoap2.cpp  stdsoap2.h
src/resqml2/: AbstractColumnLayerGridRepresentation.cpp  AbstractColumnLayerGridRepresentation.h  AbstractFeature.cpp  AbstractFeature.h  AbstractFeatureInterpretation.cpp  AbstractFeatureInterpretation.h  AbstractGridRepresentation.cpp  AbstractGridRepresentation.h  AbstractHdfProxy.cpp  AbstractHdfProxy.h  AbstractLocal3dCrs.cpp  AbstractLocal3dCrs.h  AbstractObject.cpp  AbstractObject.h  AbstractProperty.cpp  AbstractProperty.h  AbstractRepresentation.cpp  AbstractRepresentation.h  AbstractValuesProperty.cpp  AbstractValuesProperty.h  Activity.cpp  Activity.h  ActivityTemplate.cpp  ActivityTemplate.h  EpcExternalPartReference.cpp  EpcExternalPartReference.h  GridConnectionSetRepresentation.cpp  GridConnectionSetRepresentation.h  HdfProxy.cpp  HdfProxy.h  MdDatum.cpp  MdDatum.h  PropertyKind.cpp  PropertyKind.h  RepresentationSetRepresentation.cpp  RepresentationSetRepresentation.h  SubRepresentation.cpp  SubRepresentation.h  TimeSeries.cpp  TimeSeries.h
src/resqml2_0/: AbstractColumnLayerGridRepresentation.cpp  AbstractColumnLayerGridRepresentation.h  AbstractFeature.cpp  AbstractFeature.h  AbstractFeatureInterpretation.cpp  AbstractFeatureInterpretation.h  AbstractGeologicFeature.h  AbstractGridRepresentation.cpp  AbstractGridRepresentation.h  AbstractLocal3dCrs.cpp  AbstractLocal3dCrs.h  AbstractObject.cpp  AbstractObject.h  AbstractOrganizationInterpretation.cpp  AbstractOrganizationInterpretation.h  AbstractProperty.cpp  AbstractProperty.h  AbstractRepresentation.cpp  AbstractRepresentation.h  AbstractResqmlDataObject.cpp  AbstractResqmlDataObject.h  AbstractSurfaceRepresentation.cpp  AbstractSurfaceRepresentation.h  AbstractTechnicalFeature.h  AbstractValuesProperty.cpp  AbstractValuesProperty.h  BoundaryFeature.cpp  BoundaryFeature.h  BoundaryFeatureInterpretation.cpp  BoundaryFeatureInterpretation.h  CategoricalProperty.cpp  CategoricalProperty.h  CommentProperty.cpp  CommentProperty.h  ContinuousProperty.cpp  ContinuousProperty.h  DiscreteProperty.cpp  DiscreteProperty.h  EarthModelInterpretation.cpp  EarthModelInterpretation.h  (+102 more)
src/resqml2_0_1/: AbstractColumnLayerGridRepresentation.cpp  AbstractColumnLayerGridRepresentation.h  AbstractFeature.cpp  AbstractFeature.h  AbstractFeatureInterpretation.cpp  AbstractFeatureInterpretation.h  AbstractGeologicFeature.h  AbstractGridRepresentation.cpp  AbstractGridRepresentation.h  AbstractHdfProxy.cpp  AbstractHdfProxy.h  AbstractIjkGridRepresentation.cpp  AbstractIjkGridRepresentation.h  AbstractLocal3dCrs.cpp  AbstractLocal3dCrs.h  AbstractObject.cpp  AbstractObject.h  AbstractOrganizationInterpretation.cpp  AbstractOrganizationInterpretation.h  AbstractProperty.cpp  AbstractProperty.h  AbstractRepresentation.cpp  AbstractRepresentation.h  AbstractResqmlDataObject.cpp  AbstractResqmlDataObject.h  AbstractStratigraphicOrganizationInterpretation.cpp  AbstractStratigraphicOrganizationInterpretation.h  AbstractSurfaceRepresentation.cpp  AbstractSurfaceRepresentation.h  AbstractTechnicalFeature.h  AbstractValuesProperty.cpp  AbstractValuesProperty.h  Activity.cpp  Activity.h  ActivityTemplate.cpp  ActivityTemplate.h  BlockedWellboreRepresentation.cpp  BlockedWellboreRepresentation.h  BoundaryFeature.cpp  BoundaryFeature.h  (+130 more)
src/tools/: BSpline.cpp  BSpline.h  GuidTools.cpp  GuidTools.h  Misc.cpp  Misc.h  Statistics.cpp  Statistics.h  Trigonometry.cpp  Trigonometry.h  misc.cpp
src/witsml1_4_1_1/: AbstractObject.cpp  AbstractObject.h  CoordinateReferenceSystem.cpp  CoordinateReferenceSystem.h  FormationMarker.cpp  FormationMarker.h  Log.cpp  Log.h  Trajectory.cpp  Trajectory.h  Well.cpp  Well.h  Wellbore.cpp  Wellbore.h
swig/: setup.py  swigCsGenerate.ps1  swigGeneratedCsWrapper.cpp  swigGeneratedJavaWrapper.cpp  swigJavaGenerate.sh  swigModule.i  swigPythonGenerate.sh  swigResqml2CsInclude.i  swigResqml2Include.i  swigResqml2JavaInclude.i  swigResqml2_0CsInclude.i  swigResqml2_0Include.i  swigResqml2_0JavaInclude.i  swigResqml2_0_1CsInclude.i  swigResqml2_0_1Include.i  swigResqml2_0_1JavaInclude.i  swigWitsml1_4_1_1CsInclude.i  swigWitsml1_4_1_1Include.i  swigWitsml1_4_1_1JavaInclude.i
test/: AbstractTest.cpp  AbstractTest.h  CMakeLists.txt  catch.hpp  config.h  unitTest.cpp
(+281 files in other folders)
